Correct the Makefile and add a relative path to the file.c unit test

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 test_file: file.c file.h
-	gcc -Wall -Wextra -g -o test_file -DUNITTEST_FILE
+	gcc -Wall -Wextra -g -o test_file -DUNITTEST_FILE file.c
 	./test_file
 
 .PHONY: clean
